<resources>
    <string name="app_name">ListRandom</string>
    <string name="add">Add</string>
    <string name="randomize">Randomize</string>
    <string name="pencil">Pencil</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="course_subject">Course Subject</string>
    <string name="course_number">Course Number</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="due_date_mm_dd_yyyy">Due Date (MM/DD/YYYY)</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="enter_item_name_to_add_or_remove_in_list">Enter item name then press button (Edit needs selected item):</string>
    <string name="spin">Spin</string>
    <string name="slide_image_description">Slide Image</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="slide_1_title">Welcome to ListRandom!</string>
    <string name="slide_1_desc">Easily manage and randomize your lists. Perfect for tasks, choices, procrastination and more!</string>
    <string name="slide_2_title">Key Features</string>
    <string name="slide_2_desc">Add, edit, delete items. Randomize your list with a tap. Gambling but without the crippling debt!</string>
    <string name="slide_3_title">Get Started</string>
    <string name="slide_3_desc">Organize your stress while having fun. Your lists, your rules, with a bit of randomness and dopamine!</string>
</resources>
