<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Course Subject -->
        <EditText
            android:id="@+id/editTextCourseSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_subject" />

        <!-- Course Number -->
        <EditText
            android:id="@+id/editTextCourseNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_number"
            android:inputType="number" />

        <!-- Assignment Name -->
        <EditText
            android:id="@+id/editTextAssignmentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/assignment_name" />

        <!-- Due Date -->
        <EditText
            android:id="@+id/editTextDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/due_date_mm_dd_yyyy" />

        <!-- Buttons Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
