<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/content_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_container" />

    <!-- Bottom navigation container fixed at the bottom -->
    <LinearLayout
        android:id="@+id/bottom_nav_container"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/navBarBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <!-- Delete button -->
        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_minus"
            android:contentDescription="@string/delete"
            android:background="@drawable/button_background" />

        <!-- Edit button -->
        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pencil"
            android:contentDescription="@string/edit"
            android:background="@drawable/button_background" />

        <!-- Randomize button -->
        <ImageButton
            android:id="@+id/btn_randomize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_randomize"
            android:contentDescription="@string/randomize"
            android:background="@drawable/button_background" />

        <!-- Add button -->
        <ImageButton
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_plus"
            android:contentDescription="@string/add"
            android:background="@drawable/button_background" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
